--- a/index.html
+++ b/index.html
@@ -5,12 +5,6 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css" />
-
-
-
-
-
-
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
 
 
@@ -19,14 +13,6 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/icons.css">
     <link rel="stylesheet" href="css/preloader.css">
-
-
-
-
-
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/1.2.1/jquery-migrate.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
 
 </head>
 
@@ -66,7 +52,7 @@
                 <button class="btn-order">Заказать</button>
             </div>
             <div class="right-block">
-                <img src="img/product.png" alt="" class="main-image">
+                <img src="img/product.webp" alt="" class="main-image">
                 <div class="price">
                     <div class="old-price">6999 грн.</div>
                     <div class="new-price">3999 грн.</div>
@@ -183,16 +169,16 @@
             <div class="left-block">
                 <p>ремонт бампера стоит от</p>
                 <p class="cost"><span class="yellow">6000</span> рублей</p>
-                <img src="img/girl-in-car.jpg" alt="" class="full-width">
-                <img src="img/broken-car1.jpg" alt="" class="half-width">
-                <img src="img/broken-car2.jpg" alt="" class="half-width">
+                <img src="img/girl-in-car.webp" alt="" class="full-width">
+                <img src="img/broken-car1.webp" alt="" class="half-width">
+                <img src="img/broken-car2.webp" alt="" class="half-width">
             </div>
             <div class="right-block">
                 <p>Видеопарктроник с подарком стоит</p>
                 <p class="cost"><span class="yellow">3990</span> рублей</p>
                 <img src="img/product.jpg" alt="" class="full-width small-height-fix">
                 <span class="plus yellow">+</span>
-                <img src="img/gift.jpg" alt="" class="full-width">
+                <img src="img/gift.webp" alt="" class="full-width">
             </div>
             <button class="btn-order centred">Заказать</button>
         </div>
@@ -281,7 +267,7 @@
             <div class="left-block">
                 <img src="img/product-reverse.jpg" alt="">
                 <span class="plus">+</span>
-                <img src="img/gift-reverse.jpg" alt="">
+                <img src="img/gift-reverse.webp" alt="">
                 <div class="price">
                     <div class="old-price">6999 грн.</div>
                     <div class="new-price">3999 грн.</div>
@@ -302,8 +288,11 @@
 
         </div>
     </footer>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/1.2.1/jquery-migrate.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
     <script src="./js/main.js"></script>
-    <script src="lib/plugins.js"></script>
+    <!-- <script src="lib/plugins.js"></script> -->
     <script>
         // 2. This code loads the IFrame Player API code asynchronously.
         var tag = document.createElement('script');
