--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
     <section class="video">
         <div class="wrapper">
             <h2 class="h2">как работает <span class="yellow">видеопарктроник?</span></h2>
-            <div id="video">
-                <iframe width="640" height="390" src="https://www.youtube.com/embed/M7lc1UVf-VE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div>
+                <iframe class="video-frame" width="auto" height="auto" src="https://www.youtube.com/embed/M7lc1UVf-VE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
     </section>
