--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 
     <link rel="stylesheet" href="css/screen.css">
-    <link rel="stylesheet" href="css/fonts.css">
+    <link rel="preload" href="css/fonts.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/icons.css">
     <link rel="stylesheet" href="css/preloader.css">
@@ -191,7 +191,7 @@
             <i class="icon icon-arrow-left arrow-left"></i>
             <div class="review-slider">
                 <div class="slide">
-                    <img src="img/review1.jpg" alt="" class="main-review-img">
+                    <img src="img/review1.webp" alt="" class="main-review-img">
                     <p class="review-text">
                         Опять долгие ночи в интернете в поисках обзоров и сравнений… Проблема таких устройств что у них либо дизайн уродский огромный — в полтора раза больше штатного, а я вообще не люблю заднее зеркало, так как за 3 года вождения рабочих "каблучков" типа Кангу
                         и Берлинго вообще привык без него обходится, либо тех. данные никакие — камеры очень плохого качества… Уже думал что печаль… :( Но вот за пару дней поисков наткнулся на то о чем мечтал действительно — HD Recorder. Нашел его у одного
@@ -267,7 +267,7 @@
         <div class="wrapper">
             <h2 class="h2">закажите свой видеопарктроник <span class="yellow">до конца дня</span> И <span class="yellow">получите в подарок</span> антибликовое стекло</h2>
             <div class="left-block">
-                <img src="img/product-reverse.jpg" alt="">
+                <img src="img/product-reverse.webp" alt="">
                 <span class="plus">+</span>
                 <img src="img/gift-reverse.webp" alt="">
                 <div class="price">
