deleted unused css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 
     <link rel="stylesheet" href="css/screen.css">
-    <link rel="preload" href="css/fonts.css">
+    <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/icons.css">
     <link rel="stylesheet" href="css/preloader.css">
@@ -201,7 +201,7 @@
                     Днепропетровск</i></div>
                 </div>
                 <div class="slide">
-                    <img src="img/review1.jpg" alt="" class="main-review-img">
+                    <img src="img/review1.webp" alt="" class="main-review-img">
                     <p class="review-text">
                         Опять долгие ночи в интернете в поисках обзоров и сравнений… Проблема таких устройств что у них либо дизайн уродский огромный — в полтора раза больше штатного, а я вообще не люблю заднее зеркало, так как за 3 года вождения рабочих "каблучков" типа Кангу
                         и Берлинго вообще привык без него обходится, либо тех. данные никакие — камеры очень плохого качества… Уже думал что печаль… :( Но вот за пару дней поисков наткнулся на то о чем мечтал действительно — HD Recorder. Нашел его у одного
@@ -290,10 +290,12 @@
 
         </div>
     </footer>
+
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/1.2.1/jquery-migrate.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
     <script src="./js/main.js"></script>
+
 </body>
 
 </html>
